fix: :bug: fix dtos and update swagger
